add natural language query module with text preprocessing, tokenization, and entity extraction